--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,30 @@
-# This is a basic workflow to help you get started with Actions
+name: PowerShellTest
 
-name: CI
+on: push
 
-# Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   first_job:
-    runs-on: ubuntu-20.04
+    runs-on: windows-2019
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: exec cmd
-        run: /bin/wine ./SimpleSample.exe
-        
+      - name: Display hello world pwsh
+        run: |
+          write-host "hello world pwsh"
+          $PSVersionTable
+        shell: pwsh
+
+      - name: Display hello world powershell
+        run: |
+          write-host "hello world pwsh"
+          $PSVersionTable
+        shell: powershell
+
+      - name: run ps1File cmd
+        run: powershell -NoProfile -ExecutionPolicy Unrestricted ./helloworld.ps1
+        shell: cmd
+
+      - name: run ps1File pwsh
+        run: powershell -NoProfile -ExecutionPolicy Unrestricted ./helloworld.ps1
+        shell: pwsh
