--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,23 +8,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Display hello world pwsh
-        run: |
-          write-host "hello world pwsh"
-          $PSVersionTable
-        shell: pwsh
-
-      - name: Display hello world powershell
-        run: |
-          write-host "hello world pwsh"
-          $PSVersionTable
-        shell: powershell
-
+      - name: exec
       - name: run ps1File cmd
-        run: powershell -NoProfile -ExecutionPolicy Unrestricted ./helloworld.ps1
+        run: powershell -NoProfile -ExecutionPolicy Unrestricted ./SimpleSample.exe
         shell: cmd
 
       - name: run ps1File pwsh
-        run: powershell -NoProfile -ExecutionPolicy Unrestricted ./helloworld.ps1
+        run: powershell -NoProfile -ExecutionPolicy Unrestricted ./SimpleSample.exe
         shell: pwsh
         
