--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,27 +4,11 @@ on: push
 
 jobs:
   first_job:
-    runs-on: windows-2019
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: exec
-        run: |
-          write-host "hello world pwsh"
-          $PSVersionTable
-        shell: pwsh
-
-      - name: Display hello world powershell
-        run: |
-          write-host "hello world pwsh"
-          $PSVersionTable
-        shell: powershell
-
-      - name: run ps1File cmd
-        run: powershell -NoProfile -ExecutionPolicy Unrestricted ./../../SimpleSample.exe
-        shell: cmd
-
-      - name: run ps1File pwsh
-        run: powershell -NoProfile -ExecutionPolicy Unrestricted ./../../SimpleSample.exe
-        shell: pwsh
-        
+    - name: exec
+      uses: actions/checkout@v3
+    - run: ls -l
+    - run: ls -l ../
+    - run: ls -l ../../
+    - run: ls -l $HOME\work\ActionsTestSimpleSample
