--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
-name: PowerShellTest
+name: Sample
 
 on: push
 
 jobs:
   first_job:
-    runs-on: ubuntu-latest
+    runs-on: windows-2019
     steps:
     - name: Checkout
       uses: actions/checkout@v3
