--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,11 +2,17 @@ name: Sample
 on: push
 
 jobs:
-  first_job:
+  Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v3
+
+    - name: clean
+      run: make clean
+
+    - name: make
+      run: make
 
     - name: exec
       run: ./SimpleSample.exe
