--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,10 +9,12 @@ jobs:
       uses: actions/checkout@v3
 
     - name: clean
+      if: [ -e SimpleSample.exe ]; then echo 1; else echo 0; fi
       run: make clean
 
     - name: make
       run: make
 
     - name: exec
+      if: [ -e SimpleSample.exe ]; then echo 1; else echo 0; fi
       run: ./SimpleSample.exe
