--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ on: push
 
 jobs:
   Explore-GitHub-Actions:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v3
@@ -11,5 +11,7 @@ jobs:
     - name: make
       run: make
 
+    runs-on: windows-latest
+    steps:
     - name: exec
       run: ./SimpleSample.exe
