--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ on: push
 
 jobs:
   Explore-GitHub-Actions:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-runners
     steps:
     - name: Checkout
       uses: actions/checkout@v3
@@ -11,7 +11,5 @@ jobs:
     - name: make
       run: make
 
-    runs-on: windows-latest
-    steps:
     - name: exec
       run: ./SimpleSample.exe
