--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,10 @@
 name: Sample
-on: push
+on:
+  push:
 
 jobs:
-  Explore-GitHub-Actions:
-    runs-on: ubuntu-runners
+  Build1:
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v3
@@ -11,5 +12,9 @@ jobs:
     - name: make
       run: make
 
+  Build2:
+    runs-on: windows-latest
+    needs: Build1
+    steps:
     - name: exec
       run: ./SimpleSample.exe
