--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on: push
 
 jobs:
   Explore-GitHub-Actions:
-    runs-on: "ubuntu-20.04"
+    runs-on: ubuntu-18.04
     steps:
     - name: Checkout
       uses: actions/checkout@v3
