--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ on: push
 
 jobs:
   Explore-GitHub-Actions:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v3
@@ -12,4 +12,4 @@ jobs:
       run: make
 
     - name: exec
-      run: ./SimpleSample.exe
+      run: ./SimpleSample.out
