--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,3 +13,9 @@ jobs:
 
     - name: exec
       run: ./SimpleSample.out
+
+    - name: HTML Preview
+      id: html_preview
+      uses: pavi2410/html-preview-action@v2
+      with:
+      html_file: 'index.html'
