--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,8 @@ jobs:
     - name: exec
       run: ./SimpleSample.out
 
-    - name: Read coverage summary
-      id: coverage-summary
-      uses: juliangruber/read-file-action@v1.0.0
+    - name: HTML Preview
+      id: html_preview
+      uses: pavi2410/html-preview-action@v2
       with:
-          path: ./info/index.html
+      html_file: './info/index.html'
