--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,3 +19,11 @@ jobs:
       uses: pavi2410/html-preview-action@v2
       with:
         html_file: './info/index.html'
+
+    - name: Get HTML preview link
+      id: html_preview
+      uses: ./ # NOTE: replace with the latest version of this Action
+      - uses: github-actions-up-and-running/pr-comment@v1.0.0
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          message: ${{ format('[Click here to preview HTML page in browser]({0})', steps.html_preview.outputs.url) }}
