--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,11 @@ jobs:
     - name: exec
       run: ./SimpleSample.out
 
-    - name: HTML Preview
+    - name: Get HTML preview link
       id: html_preview
-      uses: pavi2410/html-preview-action@v2
+      uses: ./ # NOTE: replace with the latest version of this Action
+    - uses: github-actions-up-and-running/pr-comment@v1.0.0
       with:
         html_file: './info/index.html'
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
+        message: ${{ format('[Click here to preview HTML page in browser]({0})', steps.html_preview.outputs.url) }}
