--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,15 +14,8 @@ jobs:
     - name: exec
       run: ./SimpleSample.out
 
-    - name: html to pdf
-      uses: fifsky/html-to-pdf-action@master
+    - name: HTML Preview
+      id: html_preview
+      uses: pavi2410/html-preview-action@v2
       with:
-        htmlFile:   ./info/index.html
-        outputFile: ./info/info.pdf
-        pdfOptions: '{"format": "A4", "margin": {"top": "10mm", "left": "10mm", "right": "10mm", "bottom": "10mm"}}'
-
-    - name: upload
-      uses: actions/upload-artifact@v3
-      with:
-        name: pdfReport
-        path: ./info
+        html_file: ./info/index.html
