--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,16 @@ jobs:
     - name: exec
       run: ./SimpleSample.out
 
+    - name: gcov
+      run: |
+        gcov gen/*.gcda >> $GITHUB_STEP_SUMMARY
+        cat *.gcov
+
+    - name: lcov
+      run: |
+        lcov -d . -c -o coverage_test.info
+        genhtml coverage_test.info -o ./info
+
   deploy:
     environment:
       name: github-pages
