--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,7 @@ jobs:
 
     - name: lcov
       run: |
+        sudo apt-get -y install lcov
         lcov -d . -c -o coverage_test.info
         genhtml coverage_test.info -o ./info
 
