--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,16 +23,11 @@ jobs:
     - name: exec
       run: ./SimpleSample.out
 
-    - name: gcov
-      run: |
-        gcov gen/*.gcda >> $GITHUB_STEP_SUMMARY
-        cat *.gcov
-
-    - name: lcov
-      run: |
-        sudo apt-get -y install lcov
-        lcov -d . -c -o coverage_test.info
-        genhtml coverage_test.info -o ./info
+    - name: upload
+      uses: actions/upload-pages-artifact@v1
+      with:
+        name: UnitTest report
+        path: ./info
 
   deploy:
     environment:
