--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
     - name: upload
       uses: actions/upload-pages-artifact@v1
       with:
+        name: UnitTest report
         path: ./info/
 
   deploy:
